Clean up Lovable references and prepare for GitHub deployment

--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
     <title>WhatsWrapped</title>
-    <meta name="description" content="Preserve your memories on WhatsApp directly with the WhatsApp Wrapped Machine. Just upload your chat transcripts and see the magic. Remember, your chats are not uploaded anywhere, they stay on your device(except in case of the AI mode since it requires calls to the Gemini API). So go ahead, generate, share and enjoy!">
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Preserve your memories on WhatsApp directly with the WhatsApp Wrapped Machine. Just upload your chat transcripts and see the magic. Remember, your chats are not uploaded anywhere, they stay on your device. So go ahead, generate, share and enjoy!">
 
-    <!-- TODO: Update og:title to match your application name -->
     
     
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/VoOcKOd2uFNK5sioT39WeMZAkZl1/social-images/social-1766682941669-Gemini_Generated_Image_usd9r8usd9r8usd9.png">
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/VoOcKOd2uFNK5sioT39WeMZAkZl1/social-images/social-1766682941669-Gemini_Generated_Image_usd9r8usd9r8usd9.png">
     <meta property="og:title" content="WhatsWrapped">
   <meta name="twitter:title" content="WhatsWrapped">
